# prisma-client-py

./: pyproject.toml  setup.py
src/prisma/: __init__.py
src/prisma/engine/: utils.py
src/prisma/generator/templates/: _header.py.jinja  client.py.jinja
src/prisma/generator/templates/engine/: query.py.jinja
tests/data/: schema.prisma
tests/test_generation/exhaustive/__snapshots__/test_exhaustive/: test_async[actions.py].raw  test_async[builder.py].raw  test_async[client.py].raw  test_async[engineabstract.py].raw  test_async[enginehttp.py].raw  test_async[enginequery.py].raw  test_async[fields.py].raw  test_async[http.py].raw  test_async[models.py].raw  test_async[partials.py].raw  test_async[types.py].raw  test_sync[actions.py].raw  test_sync[builder.py].raw  test_sync[client.py].raw  test_sync[engineabstract.py].raw  test_sync[enginehttp.py].raw  test_sync[enginequery.py].raw  test_sync[enums.py].raw  test_sync[fields.py].raw  test_sync[http.py].raw  test_sync[models.py].raw  test_sync[partials.py].raw  test_sync[types.py].raw
